video-grid calc+wrap fix
thanks rada

--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,8 @@ html,body {
 	background-image: url("../img/background.jpg");
 	background-position: center;
 	background-attachment: fixed;
+	font-family: 'roboto';
 	font-size: 18px;
-}
-
-@media screen and (max-width: 414px) {
-	html,body {
-	margin: 0;
-	font-size: 13px;
-}
-.video-grid {
-	flex-direction: column;
-}
 }
 
 section {
@@ -75,20 +66,36 @@ section {
 
 .video-grid {
 	display: flex;
-	margin: 0px 10%;
+	flex-wrap: wrap;
 	justify-content: center;
-	/*position: relative;
-	left: calc(7% / 2);*/
+	margin: 1rem;
 }
 
-.item-video {
+.video-grid > .video-template {
+	width: calc(100%/3);
+}
+
+@media screen and (max-width: 414px) {
+	html,body {
+	margin: 0;
+	font-size: 13px;
+}
+.video-grid {
+	flex-direction: column;
+}
+.video-grid > .video-template {
+	width: calc(100%/1);
+}
+}
+
+.video-template > .item-video {
+	/*zoom: 60%;*/
 	width: 100%;
 }
 
 .sub-title {
-	margin-left: 15px;
-	margin-bottom: 30px;
 	color: black;
+	margin: 5px 0px 30px 0px;
 }
 
 .video-grid > .item-video{
